Bug 62536 - FORMATTING: Closing autoformat for bold/underline character doesn't end autoformatting
Summary: FORMATTING: Closing autoformat for bold/underline character doesn't end autof...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: All Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.2.0 target:4.1.0.2 targe...
Keywords: regression
: 68430 69491 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-19 18:16 UTC by Matt Burns
Modified: 2023-07-20 18:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Burns 2013-03-19 18:16:16 UTC
Problem description: 
When using autoformat to underline or bold text, the formatting continues after the closing character is typed.

This has been verified using LO 4.0.0.3 on Ubuntu 12.04.02 and Ubuntu 12.10 (x64).  

Steps to reproduce:
1. Open LibreOffice Writer.
2. Type either of the following sentences verbatim.

I hid the *pitchfork* in the silverware drawer.
I hid the _pitchfork_ in the silverware drawer.

Current behavior:
The bold/underline formatting is applied to the text "pitchfork in the silverware drawer."

Expected behavior:
The bold/underline formatting should only be applied to the word "pitchfork".

Note/Workaround:
This seems to be a state-based bug.  If the formatting is toggled off using either the toolbar or the keyboard shortcuts Ctrl-B or Ctrl-U, autoformatting works as expected in the document until it is closed and reopened.
              
Operating System: Ubuntu
Version: 4.0.0.3 release
Last worked in: (See in Summary)
Comment 1 Joel Madero 2013-04-17 18:17:55 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 3.6.5.2 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As I've been able to confirm this problem on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)
Minor - doesn't prevent high quality work, just slwos
Medium - bumped up from low default because it makes the feature much less usable

Removing regression as I can't confirm that it ever worked. Shows up in earliest bibisect (3.6 alpha) but I set version to actually installed version of LibreOffice (not bibisect version)

Whiteboard Status - ProposedEasyHack

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Joel Madero 2013-04-25 18:41:25 UTC
Changing version as I can confirm the bug in 3.6alpha using bibisect.

@Matt - version is earliest version we see the problem, thanks again for the report!

Also can you let us know what version it did work on as it's currently marked as a regression but we don't have a working version from you
Comment 3 Michael Stahl 2013-06-05 22:54:13 UTC
hmm... 062eaeffe7cb986255063bb9b0a5f3fb3fc8e34c
... the RSIDs broke that.
Comment 4 Michael Stahl 2013-06-19 22:40:05 UTC
it turns out this is not a new problem but a generic autoformat problem,
the RSIDs just make it a lot more annoying.

it can be reproduced on versions older than 3.6 as well,
by first formatting some range of text as Italic,
and then using the * autofmt inside the italic text,
then the following inserted characters also become bold+italic.
Comment 5 Commit Notification 2013-06-19 22:45:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe444d1f74abe417962be0bcd3340f40f2446b58

fdo#62536: sw: fix AutoCorrect bold/underline on existing AUTOFMT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-06-19 23:04:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5423c79efc8f225d63419ebe71da5a4a009bc64&h=libreoffice-4-1

fdo#62536: sw: fix AutoCorrect bold/underline on existing AUTOFMT


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-06-20 14:16:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5b3867f801dadc5c2c6346561e7d71990cd7eb33&h=libreoffice-4-0

fdo#62536: sw: fix AutoCorrect bold/underline on existing AUTOFMT


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2013-08-24 23:03:15 UTC
*** Bug 68430 has been marked as a duplicate of this bug. ***
Comment 9 Michael Stahl 2013-10-04 10:02:50 UTC
*** Bug 69491 has been marked as a duplicate of this bug. ***